# hand-eye_calibration

./: CMakeLists.txt  feature_extraction.cpp  hand-eye_calibration.cpp  handeye.h  pose_estimation.cpp
data/: left_image_list.xml  right_image_list.xml
